--- a/README
+++ b/README
@@ -103,30 +103,14 @@ ATTRIBUTE HANDLES
   item_elements
         Native::Array/elements
 
-  _items_cache_empty
-        Native::Array/is_empty
-
-  _items_cache_shift
-        Native::Array/shift
-
-  _items_cache_push
-        Native::Array/push
-
-  _items_cache_count
-        Native::Array/count
-
-  _items_cache_get
-        Native::Array/get
-
-  _association_cache_has
-        Native::Hash/exists
-
-  _association_cache_get
-        Native::Hash/get
-
-  _association_cache_set
-        Native::Hash/set
-
+  _items_cache_empty => Native::Array/is_empty
+  _items_cache_shift => Native::Array/shift
+  _items_cache_push  => Native::Array/push
+  _items_cache_count => Native::Array/count
+  _items_cache_get   => Native::Array/get
+  _association_cache_has =>   Native::Hash/exists
+  _association_cache_get =>   Native::Hash/get
+  _association_cache_set =>   Native::Hash/set
   run_on_items_empty
         Native::Code/execute_method
 
@@ -147,6 +131,6 @@ POD ERRORS
     Hey! The above document had some coding errors, which are explained
     below:
 
-    Around line 189:
+    Around line 183:
         You forgot a '=back' before '=head2'
 
