--- a/README
+++ b/README
@@ -78,10 +78,20 @@ IMPLEMENTATION DETAILS
 
 CONSTRUCTOR ARGUMENTS
   items
+        required ArrayRef[ Any ]
+
   _items_cache
+        lazy ArrayRef[ Any ] = [ ]
+
   _association_cache
+        lazy HashRef[ Any ] = { }
+
   on_items_empty
+        lazy CodeRef = Set::Associate::RefillItems::linear
+
   on_new_key
+        lazy CodeRef = Set::Associate::NewKey::linear_wrap
+
 METHODS
   associate
         if( $object->associate( $key ) ) {
