--- a/README
+++ b/README
@@ -111,14 +111,27 @@ METHODS
         }
 
   get_associated
+    Generates an association automatically.
+
         my $result = $object->get_associated( $key );
 
 ATTRIBUTES
   items
   _items_cache
   _association_cache
+        my $cache = $sa->_association_cache();
+        $cache->{ $key } = $value;
+
   on_items_empty
+        my $object = $sa->on_items_empty();
+        say "Running empty items mechanism " . $object->name;
+        push @items, $object->run( $sa  );
+
   on_new_key
+        my $object = $sa->on_new_key();
+        say "Running new key mechanism " . $object->name;
+        my $value = $object->run( $sa, $key );
+
 ATTRIBUTE HANDLES
   item_elements =>  Native::Array/elements
   _items_cache_empty => Native::Array/is_empty
@@ -127,8 +140,16 @@ ATTRIBUTE HANDLES
   _items_cache_count => Native::Array/count
   _items_cache_get   => Native::Array/get
   _association_cache_has =>   Native::Hash/exists
+        if ( $sa->_assocition_cache_has( $key ) ){
+            return $sa->_association_cache_get( $key );
+        }
+
   _association_cache_get =>   Native::Hash/get
+        my $assocval = $sa->_association_cache_get( $key );
+
   _association_cache_set =>   Native::Hash/set
+        $sa->_association_cache_set( $key, $assocval );
+
 AUTHOR
     Kent Fredric <kentfredric@gmail.com>
 
