--- a/README
+++ b/README
@@ -13,7 +13,9 @@ DESCRIPTION
     scope of the program, ie:
 
         my $set = Set::Associate->new(
-            items => [qw( red blue yellow )],
+            on_items_empty => Set::Associate::RefillItems->linear(
+                items => [qw( red blue yellow )],
+            ),
         );
         sub color_nick {
             my $nick = shift;
@@ -26,8 +28,10 @@ DESCRIPTION
     such as a hash
 
         my $set = Set::Associate->new(
-            items => [qw( red blue yellow )],
-            on_new_key => Set::Associate::NewKey::hash_sha1,
+            on_items_empty => Set::Associate::RefillItems->linear(
+                items => [qw( red blue yellow )],
+            ),
+            on_new_key => Set::Associate::NewKey->hash_sha1,
         );
         sub color_nick {
             my $nick = shift;
@@ -41,14 +45,17 @@ DESCRIPTION
         # Can produce colour runs if you're unlucky
 
         my $set = Set::Associate->new(
-            items => [qw( red blue yellow )],
-            on_new_key => Set::Associate::NewKey::random_pick,
+            on_items_empty => Set::Associate::RefillItems->linear(
+                items => [qw( red blue yellow )],
+            ),
+            on_new_key => Set::Associate::NewKey->random_pick,
         );
 
         # Will exhaust the colour variation before giving out the same colour twice
         my $set = Set::Associate->new(
-            items => [qw( red blue yellow )],
-            on_items_empty => Set::Associate::RefillItems::shuffle,
+            on_items_empty => Set::Associate::RefillItems->shuffle(
+                items => [qw( red blue yellow )],
+            ),
         );
 
 IMPLEMENTATION DETAILS
@@ -64,7 +71,8 @@ IMPLEMENTATION DETAILS
     "_items_cache_empty" ), the "on_items_empty" method is called (
     "run_on_items_empty" ) and the results are pushed into the pool.
 
-    The default implementation copies items from "items" into the pool.
+    The default implementation copies items from their own "items" into the
+    pool.
 
   Pool Selection
     Pool selection can either be cherry-pick based, where the pool doesn't
