--- a/README
+++ b/README
@@ -10,7 +10,7 @@ DESCRIPTION
 
     The most simple usage of this code gives out values from "items"
     sequentially, and remembers seen values and persists them within the
-    scope of the program, ie:
+    scope of the program, i.e:
 
         my $set = Set::Associate->new(
             on_items_empty => Set::Associate::RefillItems->linear(
