Build results of 3344e48 (on master)

--- a/README
+++ b/README
@@ -1,16 +1,16 @@
 NAME
-    Set::Associate - Pick items from a dataset associatively
+    Set::Associate - Pick items from a data set associatively
 
 VERSION
-    version 0.002000
+    version 0.003000
 
 DESCRIPTION
     Essentially, this is a simple toolkit to map an infinite-many items to a
-    corresponding finite-many values, ie: A nick coloring algorithm.
+    corresponding finite-many values, i.e: A nick coloring algorithm.
 
     The most simple usage of this code gives out values from "items"
-    seqeuntially, and remembers seen values and persists them within the
-    scope of the program, ie:
+    sequentially, and remembers seen values and persists them within the
+    scope of the program, i.e:
 
         my $set = Set::Associate->new(
             on_items_empty => Set::Associate::RefillItems->linear(
@@ -66,13 +66,10 @@ IMPLEMENTATION DETAILS
     *   pool selection
 
   Pool Population
-    The pool of available options ( "_items_cache" ) is initialised as an
+    The pool of available options ( "_items_cache" ) is initialized as an
     empty list, and every time the pool is being detected as empty (
     "_items_cache_empty" ), the "on_items_empty" method is called (
     "run_on_items_empty" ) and the results are pushed into the pool.
-
-    The default implementation copies items from their own "items" into the
-    pool.
 
   Pool Selection
     Pool selection can either be cherry-pick based, where the pool doesn't
@@ -85,17 +82,13 @@ IMPLEMENTATION DETAILS
     occur periodically to regenerate the source list.
 
 CONSTRUCTOR ARGUMENTS
-  items
-        required ArrayRef[ Any ]
-
   on_items_empty
-        lazy Set::Associate::RefillItems = Set::Associate::RefillItems::linear
+        required Set::Associate::RefillItems
 
   on_new_key
         lazy Set::Associate::NewKey = Set::Associate::NewKey::linear_wrap
 
 METHODS
-  items_elements
   run_on_items_empty
         if( not @items ){
             push @items, $sa->run_on_items_empty();
@@ -119,7 +112,6 @@ METHODS
         my $result = $object->get_associated( $key );
 
 ATTRIBUTES
-  items
   on_items_empty
         my $object = $sa->on_items_empty();
         say "Running empty items mechanism " . $object->name;
