--- a/Changes
+++ b/Changes
@@ -1,57 +1,54 @@
 Release history for Set-Associate
 
 {{$NEXT}}
+ [Dependencies::Stats]
+ - Dependencies changed since 0.003000, see misc/*.deps* for details
+ - build: ↓1
+ - configure: ↓1
+ - develop: +4
+ - test: +3 ↑1 -2
 
 0.003000 2013-03-09T18:56:28Z
  [API Changes]
  - 0.001000 syntax fully deprecated
- - `::NewKey` and `::RefillItems` are now mostly proxy packages, class
-   methods defer to dedicated packages,
- - `::NewKey` and `::NewKey::*` are things that `do`
-   `Set::Associate::Role::NewKey`, and conformance to this role is now
-   reqired for `on_new_key`, not `isa Set::Associate::NewKey`
- - `::RefillItems` and `::RefillItems::*` are things that `do`
-   `Set::Associate::Role::RefillItems`, and conformance to this role is now
-   reqired for `on_items_empty`, not `isa Set::Associate::RefillItems`
+ - `::NewKey` and `::RefillItems` are now mostly proxy packages, class methods defer to dedicated packages,
+ - `::NewKey` and `::NewKey::*` are things that `do` `Set::Associate::Role::NewKey`, and conformance to this role is
+   now reqired for `on_new_key`, not `isa Set::Associate::NewKey`
+ - `::RefillItems` and `::RefillItems::*` are things that `do` `Set::Associate::Role::RefillItems`, and conformance to
+   this role is now reqired for `on_items_empty`, not `isa Set::Associate::RefillItems`
  - `on_items_empty` is now a mandatory argument
  - `run` is no longer the public method for `::NewKey`, use `get_assoc`
  - `run` is no longer the public method for `::RefillItems`, use `get_all`
 
- [Dependencies::New / runtime requires]
- - Moose
- - MooseX::AttributeShortcuts
- - MooseX::Role::Parameterized
-
- [Dependencies::New / test requires]
- - Test::Fatal
-
- [Dependencies::Removed / runtime requires]
- - Moo
+ [Dependencies::Stats]
+ - Dependencies changed since 0.002000, see misc/*.deps* for details
+ - runtime: +3 -1
+ - test: +1
 
  [Internals]
- - Code shifted from Moo to Moose, because we want Parameterised Roles, so
-   may as well go the whole cow.
+ - Code shifted from Moo to Moose, because we want Parameterised Roles, so may as well go the whole cow.
  - Hand-written Accessors now replaced by Moose native traits
  - `items` and `items_elements` on the main class now gone.
 
 0.002000 2013-02-27T17:35:56Z
  [API Changes]
- - Set::Associate should no longer be passed an `items` value, instead,
-   those should be passed to the `on_items_empty` handler constructor.
+ - Set::Associate should no longer be passed an `items` value, instead, those should be passed to the `on_items_empty`
+   handler constructor.
  - `items` support temporarily forwarded for you till 0.3.0 at least
- - ::NewKey and ::RefillItems now only should have their sugars accessed
-   via method style, ie: ::NewKey->linear_wrap()
+ - ::NewKey and ::RefillItems now only should have their sugars accessed via method style, ie: ::NewKey->linear_wrap()
+
+ [Dependencies::Stats]
+ - Dependencies changed since 0.001001, see misc/*.deps* for details
+ - runtime: +1
+ - test: -1
 
  [Internals]
  - commmon code moved to a ::Utils file
 
 0.001001 2013-02-25T15:23:51Z
  [minor bugfix]
- - I accidentally released the previous version with a version of
-   Dist::Zilla that *wasn't* immune to v5.16 package declarations.
-   Unfortunately, my patches haven't landed upstream yet, so working on a
-   local build.
+ - I accidentally released the previous version with a version of Dist::Zilla that *wasn't* immune to v5.16 package
+   declarations. Unfortunately, my patches haven't landed upstream yet, so working on a local build.
 
 0.001000 2013-02-25T11:47:01Z
  - First version.
-
