--- a/Changes
+++ b/Changes
@@ -3,10 +3,11 @@ Release history for Set-Associate
 {{$NEXT}}
  [Dependencies::Stats]
  - Dependencies changed since 0.003000, see misc/*.deps* for details
- - build: ↓1
- - configure: ↓1
- - develop: +4
- - test: +3 ↑1 -2
+ - build: ↑1
+ - configure: +1 ↑1
+ - develop: +55 -2 (recommends: -1, suggests: +1 ↑1)
+ - runtime: (recommends: +1)
+ - test: +3 ↑1 -2 (recommends: +1)
 
 0.003000 2013-03-09T18:56:28Z
  [API Changes]
