--- a/Changes
+++ b/Changes
@@ -6,7 +6,7 @@ Release history for Set-Associate
  - build: ↑1
  - configure: +1 ↑1
  - develop: +55 -2 (recommends: -1, suggests: +1 ↑1)
- - runtime: (recommends: +1)
+ - runtime: ↓1 (recommends: +1)
  - test: +3 ↑1 -2 (recommends: +1)
 
 0.003000 2013-03-09T18:56:28Z
