--- a/Changes
+++ b/Changes
@@ -1,13 +1,17 @@
 Release history for Set-Associate
 
 {{$NEXT}}
+ [01 - Installer Changed]
+ - ExtUtils::MakeMaker is now the shipped install toolkit.
+ - https://questhub.io/realm/perl/quest/5388cc12bbd0be5b2500011f
+
  [Dependencies::Stats]
  - Dependencies changed since 0.003000, see misc/*.deps* for details
- - build: ↑1
- - configure: +1 ↑1
- - develop: +55 -2 (recommends: -1, suggests: +1 ↑1)
+ - build: -1
+ - configure: +2 -1 (recommends: +1)
+ - develop: +54 -2 (recommends: +1 -1, suggests: +1 ↑1)
  - runtime: ↓1 (recommends: +1)
- - test: +3 ↑1 -2 (recommends: +1)
+ - test: +3 ↓1 -2 (recommends: +3)
 
 0.003000 2013-03-09T18:56:28Z
  [API Changes]
