--- a/Changes
+++ b/Changes
@@ -14,7 +14,7 @@ Release history for Set-Associate
  - build: -1
  - configure: +2 -1 (recommends: +1)
  - develop: +54 -2 (recommends: +1 -1, suggests: +1 ↑1)
- - runtime: +1 ↓1 (recommends: +1)
+ - runtime: +1 ↑1 ↓1 (recommends: +1)
  - test: +3 ↓1 -2 (recommends: +3)
 
 0.003000 2013-03-09T18:56:28Z
