--- a/Changes
+++ b/Changes
@@ -1,6 +1,12 @@
 Release history for Set-Associate
 
 {{$NEXT}}
+ - Bugfix: Avoid test failures with -Ddefault_inc_excludes_dot
+
+ [Dependencies::Stats]
+ - Dependencies changed since 0.004000, see misc/*.deps* for details
+ - develop: +3 ↑2 (suggests: ↑2)
+ - test: ↓1
 
 0.004000 2015-08-16T11:08:56Z e423dea
  [01 - Installer Changed]
